# input-form-fullstack

./: README.md
client/: .env.production  package-lock.json  package.json
client/src/: App.tsx
client/src/components/: Navbar.tsx
client/src/pages/: FormPage.tsx  SubmissionsPage.tsx
client/src/services/: api.ts
client/src/types/: index.ts
server/: .env  .env.example  Dockerfile  Procfile  build.sh  docker-compose.yml  gunicorn_config.py  pyproject.toml  render.yaml  render_build.sh  run_migrations.py
server/src/core/: cors_middleware.py  middleware.py  settings.py  urls.py
server/src/submissions/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
